--- a/vimwiki/To-Do.wiki
+++ b/vimwiki/To-Do.wiki
@@ -19,6 +19,8 @@
 * [ ] Organize main page
 * [ ] Put Vacation notes into main diary
 * [ ] Make phone more versitile
+* [ ] Write a python script that will take dates in the wiki entry and link them to my Diary and key-words in the Diary entry and link them to my wiki
+* [ ] Organize To-Do notes so that there are tags or a hierarchy for timeliness
 
 == Devan Database Project ==
 
