--- a/vimwiki/To-Do.wiki
+++ b/vimwiki/To-Do.wiki
@@ -19,10 +19,11 @@
 * [ ] Organize main page
 * [ ] Put Vacation notes into main diary
 * [ ] Make phone more versitile
-* [ ] Write a python script that will take dates in the wiki entry and link them to my Diary and key-words in the Diary entry and link them to my wiki
+* [ ] Write a python script that will take dates in the wiki entry and link them to my Diary and key-words in the Diary entry and link them to my wiki @history
 * [ ] Organize To-Do notes so that there are tags or a hierarchy for timeliness
 
 == Devan Database Project ==
 
 * [ ] Do Daily work
 * [ ] learn to edit data with Python for vimwiki stuff too
+* [ ] Goal project: take all phone entries in "temp" file and write them to appropriate location. @vimwiki
