--- a/vimwiki/diary/diary.wiki
+++ b/vimwiki/diary/diary.wiki
@@ -1,6 +1,18 @@
 = Diary =
 == 2024 ==
 
+=== September ===
+        - [[2024-09-01]]
+
+=== August ===
+        - [[2024-08-23]]
+        - [[2024-08-21]]
+        - [[2024-08-12]]
+        - [[2024-08-11]]
+        - [[2024-08-09]]
+        - [[2024-08-08]]
+        - [[2024-08-04]]
+
 === July ===
         - [[2024-07-31]]
         - [[2024-07-28]]
