--- a/vimwiki/Demon Slayer.wiki
+++ b/vimwiki/Demon Slayer.wiki
@@ -1,5 +1,14 @@
 = Demon Slayer =
 
+Sat Oct 26 07:29:37 PM EDT 2024
+
+From what I remember, Tanjiro went to everyone's place to train, except at the one Hashira that is super scarred (who stabbed Nezuko in the beginning).
+Well, he went there, but they didn't get along so he was told to move on.
+The large Hashira that cries all the time has the saddest backstory with all his orphan kids dying in front of him and then him being blamed.
+And finally Zenitsu got some news that seems to have given him some character growth.
+We know this because at the end of the arc, they all attack Muzan and he teleports them all to his dimension and Zenitsu is awake with his lightning ability.
+So, Fitz and I are excited to see the movie hopefully together in theaters.
+
 Sun Jul 28 03:32:26 PM EDT 2024
 
 We watched a few episodes today.
