--- a/vimwiki/Vinland Saga.wiki
+++ b/vimwiki/Vinland Saga.wiki
@@ -1,5 +1,7 @@
 = Vinland Saga =
 
+== Diary: ==
+
 Wed Jul 31 06:11:11 AM EDT 2024
 
 So this is going to be a little difficult because I'm going off of the episode I watched the 29th I think, but here we go.
@@ -55,3 +57,12 @@ The story let Thorfin take backseat with Askallad and the prince and everyone.
 Really interesting that the army is all but gone too.
 It's just Thorfin, Askallad, the prince, and Thorkell now.
 Really liking the dynamics the King poses on the prince and everything too, trying to kill him.
+
+Wed Jul 10 06:06:03 AM EDT 2024
+
+I resumed this last night.
+It's starting to get good with the king and everything.
+Now it'll be a political war and stuff since they were trying to kill the prince actually.
+Thorfin was a side character for the most part here.
+Anime seems so real when you're high.
+
