--- a/vimwiki/diary/diary.wiki
+++ b/vimwiki/diary/diary.wiki
@@ -1,7 +1,17 @@
 = Diary =
 == 2024 ==
 
+=== October ===
+        - [[2024-10-26]]
+
 === September ===
+        - [[2024-09-12]]
+        - [[2024-09-09]]
+        - [[2024-09-07]]
+        - [[2024-09-06]]
+        - [[2024-09-05]]
+        - [[2024-09-03]]
+        - [[2024-09-02]]
         - [[2024-09-01]]
 
 === August ===
