Added 'Trophies' link to Dead space page for tracking progress

--- a/vimwiki/Dead Space (2023).wiki
+++ b/vimwiki/Dead Space (2023).wiki
@@ -8,6 +8,8 @@ Update:
 I've finished it thrice now as of 1/1/2025.
 Still working on the Plat.
 
+= [[DSTrophies|Trophies]] =
+
 = Diary =
 
 Thu Jan  2 03:05:18 PM EST 2025
